--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
+          haxelib install newgrounds
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
@@ -83,6 +84,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
+          haxelib install newgrounds
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
@@ -123,6 +125,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
+          haxelib install newgrounds
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
