--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
+          haxelib install polymod
           haxelib install newgrounds
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
@@ -85,6 +86,7 @@ jobs:
           haxelib install hxjsonast
           haxelib install hscript
           haxelib install newgrounds
+          haxelib install polymod
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
@@ -126,6 +128,7 @@ jobs:
           haxelib install hxjsonast
           haxelib install hscript
           haxelib install newgrounds
+          haxelib install polymod
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
